--- a/ice-repo/definitions/chart-dev/elements/funds.submit.yml
+++ b/ice-repo/definitions/chart-dev/elements/funds.submit.yml
@@ -2,7 +2,7 @@ element:
   type: action
   defaultValue:
     StaticValueRule:
-      value: policies.search
+      value: fund-values-send
   component:
     StaticComponentRule:
       component:
