--- a/ice-repo/definitions/chart-dev/elements/funds.consent.line_5.yml
+++ b/ice-repo/definitions/chart-dev/elements/funds.consent.line_5.yml
@@ -1,3 +1,12 @@
 element:
   type: text
-  viewMode: output
+  component:
+    StaticComponentRule:
+      component:
+        IceRadiobuttonGroup: {}
+  values:
+    ListValuesRule:
+      list: insis.fund.values.consent.line_5.options
+  label:
+    ResourceLabelRule:
+      key:  elements.fund-values-consent-line-5
