--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "main": "apps/angular/src/main.ts",
             "polyfills": "apps/angular/src/polyfills.ts",
             "tsConfig": "apps/angular/tsconfig.app.json",
-            "aot": true,
+            "aot": false,
             "assets": ["apps/angular/src/favicon.ico", "apps/angular/src/assets"],
             "styles": ["apps/angular/src/styles/styles.scss"],
             "scripts": []
@@ -40,7 +40,7 @@
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "aot": true,
+              "aot": false,
               "buildOptimizer": false,
               "budgets": [
                 {
@@ -152,7 +152,7 @@
               "optimization": true,
               "extractLicenses": false,
               "inspect": false,
-              "aot": true,
+              "aot": false,
               "sourceMap": false,
               "externalDependencies": "none",
               "fileReplacements": [
