--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "insis-portal",
+  "name": "Eurolife-portal-v2",
   "version": "0.0.0",
   "license": "Commercial",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "child_process": false,
+    "https": false
+  },
   "scripts": {
     "ng": "ng",
     "nx": "nx",
@@ -27,6 +34,8 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "start": "node tools/create-build-info.js && node tools/start.js",
+    "start-express": "ng build express && node --inspect dist/apps/express/main.js ",
+    "start-angular": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve",
     "start:ice-debug": "node tools/enable-ice-foundation-sources.js && npm run start",
     "revert:ice-debug": "git checkout tsconfig.json && npm run install-ice-packages",
     "build": "node tools/create-build-info.js && ng build angular --prod && ng build express --prod && npm run copy-visual-ice",
@@ -50,103 +59,138 @@
     "@angular/core": "9.1.9",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "9.1.9",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "9.1.3",
     "@angular/material-moment-adapter": "9.1.3",
     "@angular/platform-browser": "9.1.9",
     "@angular/platform-browser-dynamic": "9.1.9",
     "@angular/router": "9.1.9",
+    "@azure/identity": "1.3.0",
+    "@azure/keyvault-certificates": "4.1.0",
+    "@azure/keyvault-secrets": "4.1.0",
+    "@google-pay/save-button-angular": "^1.0.0",
     "@google/maps": "^1.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@nrwl/angular": "9.3.0",
     "@nrwl/nx": "^7.8.7",
+    "@types/chartjs-plugin-annotation": "^0.5.1",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/helmet": "0.0.43",
     "@types/jsonwebtoken": "^8.5.0",
+    "@walletpass/pass-js": "^6.9.1",
+    "@zxing/ngx-scanner": "^1.7.2",
+    "amazing-time-picker": "^1.8.0",
+    "angular-webstorage-service": "^1.0.2",
+    "angular2-text-mask": "^9.0.0",
     "async-file": "^2.0.2",
     "axios": "^0.19.0",
     "basic-auth": "^2.0.1",
     "bcx-expression-evaluator": "1.1.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "classlist.js": "^1.1.20150312",
     "compression": "^1.7.2",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "deep-diff": "^1.0.2",
     "dicer": "^0.3.0",
+    "dom-parser": "^0.1.6",
     "dotenv": "^6.2.0",
+    "echarts": "^4.6.0",
+    "emailjs": "^2.2.0",
     "es6-template-strings": "^2.0.1",
     "express": "4.17.1",
+    "express-handlebars": "^4.0.6",
     "express-list-endpoints": "^4.0.0",
+    "express-winston": "^3.0.1",
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "filesize": "^4.1.2",
     "flat": "^4.1.0",
-    "fs": "0.0.1-security",
-    "chartjs-plugin-annotation": "^0.5.7",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "gaxios": "^2.1.0",
+    "globalthis": "^1.0.3",
+    "google-auth-library": "^5.10.1",
     "hammerjs": "^2.0.8",
+    "handlebars": "^4.7.7",
+    "heapdump": "^0.3.15",
     "helmet": "^3.21.1",
     "iban": "0.0.12",
     "js-yaml": "^3.13.1",
+    "js2xmlparser": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jsrsasign": "^10.5.8",
+    "jwt-decode": "^2.2.0",
+    "kafkajs": "^1.12.0",
+    "kafkajs-lz4": "^2.0.0-beta.0",
     "lodash": "^4.17.15",
     "lru-cache": "^4.1.5",
     "markdown-to-html-pipe": "^1.2.5",
     "moment": "^2.24.0",
+    "mongoose": "^5.10.19",
     "morgan": "^1.9.1",
+    "nedb": "^1.8.0",
+    "ng-inline-svg": "^8.3.0",
+    "ng-otp-input": "^1.7.1",
+    "ng-recaptcha": "^4.3.0",
+    "ng2-charts": "^2.2.3",
+    "ngx-device-detector": "^1.3.3",
+    "ngx-echarts": "^4.2.2",
+    "ngx-joyride": "^2.2.10",
+    "ngx-skeleton-loader": "^2.4.4",
+    "ngx-webstorage-service": "^3.1.3",
+    "njwt": "^1.0.0",
     "nmbr": "^1.2.0",
+    "node-cron": "^3.0.0",
+    "node-libcurl": "^1.3.3",
+    "node-schedule": "^2.0.0",
     "oracledb": "^4.2.0",
+    "primeicons": "^6.0.1",
     "pug": "^2.0.3",
     "randexp": "^0.5.3",
-    "crypto-js": "^3.1.9-1",
     "rxjs": "6.5.5",
     "rxjs-compat": "^6.4.0",
+    "serve-index": "^1.9.1",
     "signature_pad": "^3.0.0-beta.4",
     "simple-git": "^1.116.0",
     "soap": "^0.25.0",
+    "tns-core-modules": "^6.6.0-next-2020-04-20-155205-01",
+    "toad-scheduler": "^1.6.0",
     "tslib": "^1.10.0",
+    "uppercamelcase": "^3.0.0",
     "uuid": "^8.3.2",
     "validator": "^10.11.0",
+    "winston": "^3.1.0",
     "xlsx": "^0.14.2",
     "xml2js": "^0.4.23",
-    "zone.js": "~0.10.2",
-    "ngx-echarts": "^4.2.2",
-    "echarts": "^4.6.0",
-    "ngx-webstorage-service": "^3.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
-    "ngx-joyride": "^2.2.10",
-    "ng-inline-svg": "^8.3.0",
-    "ng2-charts": "^2.2.3",
-    "ngx-device-detector": "^1.3.3",
-    "ng-otp-input": "^1.7.1",
-    "angular2-text-mask": "^9.0.0",
-    "ngx-skeleton-loader": "^2.4.4",
-    "ng-recaptcha": "^4.3.0",
-    "@zxing/ngx-scanner": "^1.7.2",
-    "@google-pay/save-button-angular": "^1.0.0",
-    "@azure/identity": "^1.3.0",
-    "@azure/keyvault-certificates": "^4.1.0",
-    "@azure/keyvault-secrets": "^4.1.0",
-    "amazing-time-picker": "^1.8.0",
-    "jwt-decode": "^2.2.0",
-    "kafkajs": "^1.12.0",
-    "kafkajs-lz4": "^2.0.0-beta.0",
-    "node-libcurl": "^1.3.3",
-    "node-schedule": "^2.0.0",
-    "chart.js": "^2.9.4"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.7",
     "@angular/cdk": "9.1.3",
     "@angular/cli": "9.1.7",
+    "@angular/compiler": "9.1.9",
     "@angular/compiler-cli": "9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
     "@angular/language-service": "9.1.9",
     "@nrwl/express": "9.3.0",
     "@nrwl/jest": "9.3.0",
     "@nrwl/node": "9.3.0",
     "@nrwl/workspace": "9.3.0",
     "@types/basic-auth": "^1.1.2",
+    "@types/chartjs-plugin-annotation": "^0.5.1",
     "@types/crypto-js": "^3.1.43",
     "@types/deep-diff": "1.0.0",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "4.17.0",
+    "@types/express": "4.17.13",
+    "@types/express-serve-static-core": "4.17.30",
+    "@types/express-winston": "^3.0.0",
     "@types/faker": "^4.1.5",
     "@types/flat": "0.0.28",
     "@types/helmet": "^0.0.43",
@@ -154,13 +198,13 @@
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "4.14.120",
     "@types/lru-cache": "^4.1.3",
+    "@types/nedb": "^1.8.5",
     "@types/node": "^12.20.55",
     "@types/pug": "^2.0.4",
     "@types/signature_pad": "^2.3.2",
     "@types/uuid": "^8.3.3",
     "@types/validator": "^10.11.0",
-    "@types/nedb": "^1.8.5",
-    "@types/chartjs-plugin-annotation": "^0.5.1",
+    "chartjs-plugin-annotation": "^0.5.7",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.0.0",
     "cpx": "^1.5.0",
@@ -173,13 +217,15 @@
     "jest-preset-angular": "8.1.3",
     "jsonix": "^3.0.0",
     "prettier": "2.0.4",
-    "chartjs-plugin-annotation": "^0.5.7",
-    "primeng": "^5.2.0",
+    "primeng": "^5.2.7",
     "rimraf": "^2.6.3",
     "string-replace-loader": "^2.2.0",
     "ts-jest": "25.2.1",
-    "ts-node": "^8.1.0",
+    "ts-node": "^8.10.2",
     "tslint": "6.0.0",
-    "typescript": "3.8.3"
+    "typescript": "^3.8.3"
+  },
+  "overrides": {
+    "@azure/core-util": "1.2.0"
   }
 }
